# opencl-testsuite

./: CMakeLists.txt  README.md  index.html  params.json
cmake/: FindOpenCL.cmake
resultdb/: README.md  collect_results.py  create_public_results.py  test_results.json  test_results.json.js  test_results.jsonp
stylesheets/: stylesheet.css
tests/: lit.cfg
tests/kernel/: cast_and_do_arithmetics_with_local_pointer.cl  constant_struct_has_pointer_to_self.cl  nested_struct_with_local_memory_pointers.cl  test_hd4k_and_640m_fail_compile_unreduced.cl  test_suite_simple_compile.cl  test_suite_usage_example.cl  unreduced_test_failing_intel_CPU.cl  use_local_address_in_inline_function.cl  write_value_to_local_memory_variable.cl  write_wg_size_to_local_memory_table.cl  zero_low_or_high_bits_of_local.cl
tools/: report-results.py
tools/android-ocl-tester/OclTester/: .project  AndroidManifest.xml  README.md  build.xml  local.properties
tools/android-ocl-tester/OclTester/jni/: Android.mk  Application.mk  jni-wrapper.cpp  ocl-tester.cpp  ocl-tester.hpp
tools/android-ocl-tester/OclTester/res/layout/: main.xml
tools/android-ocl-tester/OclTester/res/values/: strings.xml
tools/android-ocl-tester/OclTester/src/com/example/ocltester/: MainActivity.java
tools/android-ocl-tester/OclTester/src/com/lepisto/mikael/ocltester/: MainActivity.java  OclCallService.java  OclCallServiceClient.java  OclTester.java  OclTesterActivity.java
tools/ocl-tester/: CMakeLists.txt  ocl-tester.cpp
